fix bg images on safari

--- a/src/_assets/stylesheets/app.css
+++ b/src/_assets/stylesheets/app.css
@@ -23,13 +23,6 @@ header .top-bg {
 	}
 }
 
-@media (max-width: 1024px) {
-	.main-banner-webp {
-		background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-			url(../../static/bg-main.webp);
-		background-size: cover;
-	}
-}
 
 .nosotros {
 	background-image: url(../../static/mano.png);
